...
                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                    <color key="textColor" name="YP White"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wTU-8I-j6m" userLabel="Like Button">
                                                    <rect key="frame" x="331" y="11" width="42" height="42"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="like button"/>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="grayLike"/>
                                                    <connections>
                                                        <action selector="didTapLikeButton:" destination="wiF-pS-T0Y" eventType="touchUpInside" id="NXm-08-cMH"/>
                                                    </connections>
                                                </button>
...
                                <connections>
                                    <outlet property="delegate" destination="Gh4-dQ-rVY" id="GJk-v2-EZZ"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FMv-dJ-7Mv" userLabel="Return Button">
                                <rect key="frame" x="8" y="8" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="nav back button white"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="6Q1-IF-YTx"/>
                                    <constraint firstAttribute="height" constant="48" id="kli-N0-cfl"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="backward">
...
