...
            progressView.trailingAnchor.constraint(equalTo: view.safeAreaLayoutGuide.trailingAnchor)
        ])
    }
    
    private func addSubviews() {
        view.addSubview(webView)
        webView.accessibilityIdentifier = "UnsplashWebView"
        view.addSubview(progressView)
    }
}

extension WebViewViewController: WKNavigationDelegate {
    func webView(
...
