...
    }
    
    private func addSubviews() {
        view.backgroundColor = blackColor
        view.addSubview(logoImage)
        view.addSubview(loginButton)
        loginButton.accessibilityIdentifier = "Authenticate"
    }
    
    private func addConstraints() {
        NSLayoutConstraint.activate([
            logoImage.centerXAnchor.constraint(equalTo: view.centerXAnchor),
            logoImage.centerYAnchor.constraint(equalTo: view.centerYAnchor),
...
